feat: 优化 AI 模块